test: update homepage tests

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -68,8 +68,9 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                     </div>
                     <div class="about-text__container">
                         <p>
-                            eRegulations organizes together regulations, subregulatory
-                            guidance, and other related policy materials.
+                            eRegulations organizes together regulations,
+                            subregulatory guidance, and other related policy
+                            materials.
                         </p>
                         <a
                             href="{% url 'about' %}"
