--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -105,7 +105,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                             </div>
                             <a
                                 href='{% url "search" %}?q="public%20health%20emergency"'
-                                class="action-btn default-btn link-btn"
+                                class="action-btn default-btn link-btn sample-search-btn"
                                 >Try a Sample Search</a
                             >
                         </div>
