fix: import application settings to homepage stylesheet

--- a/solution/ui/regulations/css/scss/partials/_site_homepage.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage.scss
@@ -2,6 +2,8 @@
 // Site Homepage
 //-----------------------------
 
+@import "../application_settings";
+
 .site-homepage--update {
     @mixin link-common {
         text-decoration: none;
