--- a/solution/backend/regulations/templates/regulations/statute.html
+++ b/solution/backend/regulations/templates/regulations/statute.html
@@ -1,1 +1,49 @@
-<p>hello world</p>
+{% extends "regulations/base.html" %}
+{% load static %}
+{% load render_nested %}
+
+{% block title %}
+Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
+{% endblock %}
+
+{% block spa_styles %}
+<link
+    href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
+    rel="stylesheet"
+/>
+{% endblock %}
+
+{% block body_class %}site-statutes{% endblock %}
+
+{% block pre_header %}
+<a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
+{% endblock %}
+
+{% block header %}
+<header id="header" class="sticky">
+    <header-component home-url="{% url 'homepage' %}">
+        <jump-to
+            slot="jump-to"
+            api-url="{{ API_BASE }}"
+            home-url="{% url 'homepage' %}"
+        ></jump-to>
+        <header-links
+            slot="links"
+            about-url="{% url 'about' %}"
+            resources-url="{% url 'resources' %}"
+        ></header-links>
+        <header-search
+            slot="search"
+            search-url="{% url 'search' %}"
+        ></header-search>
+    </header-component>
+</header>
+{% endblock %}
+
+{% block body %}
+{% endblock %}
+
+{% block post_footer %}
+<script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
+<script src="{% static '/js/eregs-main.iife.js' %}"></script>
+{% endblock %}
