--- a/solution/ui/regulations/css/scss/main.scss
+++ b/solution/ui/regulations/css/scss/main.scss
@@ -25,6 +25,7 @@ $eregs-image-path: "../images" !default;
 @import "partials/site_homepage";
 @import "partials/_site_homepage_update.scss";
 @import "partials/search";
+@import "partials/statutes";
 @import "partials/compare";
 @import "partials/flash_banner";
 @import "partials/header";
