--- a/solution/backend/regulations/templates/regulations/statute.html
+++ b/solution/backend/regulations/templates/regulations/statute.html
@@ -1,49 +1,35 @@
 {% extends "regulations/base.html" %}
 {% load static %}
-{% load render_nested %}
+{% load string_formatters %}
 
-{% block title %}
-Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
-{% endblock %}
+{% block title %}Search {% if q %}for {{ q }} {% endif %}| Medicaid & CHIP eRegulations{% endblock %}
 
 {% block spa_styles %}
-<link
-    href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css"
-    rel="stylesheet"
-/>
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static '/vite/index.css' %}" />
 {% endblock %}
 
-{% block body_class %}site-statutes{% endblock %}
+{% block blocking_modal %}{% endblock %}
+
+{% block flash_banner %}{% endblock %}
 
 {% block pre_header %}
-<a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
-{% endblock %}
-
-{% block header %}
-<header id="header" class="sticky">
-    <header-component home-url="{% url 'homepage' %}">
-        <jump-to
-            slot="jump-to"
-            api-url="{{ API_BASE }}"
-            home-url="{% url 'homepage' %}"
-        ></jump-to>
-        <header-links
-            slot="links"
-            about-url="{% url 'about' %}"
-            resources-url="{% url 'resources' %}"
-        ></header-links>
-        <header-search
-            slot="search"
-            search-url="{% url 'search' %}"
-        ></header-search>
-    </header-component>
-</header>
+    <a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
 {% endblock %}
 
 {% block body %}
+<div
+    id="vite-app"
+    data-api-url="{{ API_BASE }}"
+    data-about-url="{% url 'about' %}"
+    data-custom-url="{{ CUSTOM_URL }}"
+    data-home-url="{% url 'homepage' %}"
+    data-resources-url="{% url 'resources' %}"
+    data-search-url="{% url 'search' %}"
+    data-host="{{ host }}"
+></div>
 {% endblock %}
 
 {% block post_footer %}
-<script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
-<script src="{% static '/js/eregs-main.iife.js' %}"></script>
+    <script src="{% static '/vite/index.js' %}"></script>
 {% endblock %}
