--- a/solution/ui/regulations/css/scss/partials/_site_homepage.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage.scss
@@ -283,6 +283,10 @@
         justify-content: space-between;
         padding-bottom: 0;
 
+        @mixin clamp-title {
+            font-size: clamp(1rem, 2.2cqi, 1.5rem);
+        }
+
         .top-container {
             width: 100%;
             margin: 0 auto;
@@ -340,13 +344,19 @@
 
                     .resources__container {
                         margin-right: 15px;
-                        padding-top: 24px;
+                        padding-top: 19px;
                     }
 
                     .about-text__container,
                     .policy-materials__container {
                         margin-left: 15px;
                         margin-bottom: 30px;
+                    }
+
+                    .policy-materials__container {
+                        .policy-materials__title {
+                            @include clamp-title;
+                        }
                     }
                 }
             }
@@ -423,12 +433,13 @@
                     }
 
                     .content-tabs {
+                        @include clamp-title;
+
                         font-family: $secondary_site_font;
                         letter-spacing: 0;
                         color: $dark_blue;
                         text-transform: none !important;
                         line-height: 36px;
-                        font-size: clamp(1rem, 2.2cqi, 1.5rem);
                     }
 
                     .recent-date {
@@ -469,7 +480,6 @@
                 }
 
                 .policy-materials__container {
-                    container: policy-materials-container / inline-size;
 
                     flex: 1;
                     display: flex;
@@ -490,6 +500,8 @@
                         }
 
                         .policy-materials__categories {
+                            container: policy-materials-categories / inline-size;
+
                             display: flex;
                             flex-wrap: wrap;
                             margin-bottom: 8px;
@@ -506,7 +518,7 @@
                                     border-right: 1px solid $light_gray;
                                 }
 
-                                @container policy-materials-container (max-width: 274px) {
+                                @container policy-materials-categories (max-width: 274px) {
                                     font-size: 12px;
                                     line-height: 20px;
 
@@ -516,7 +528,7 @@
                                     }
                                 }
 
-                                @container policy-materials-container (max-width: 215px) {
+                                @container policy-materials-categories (max-width: 215px) {
                                     font-size: 11px;
 
                                     &:not(:last-child) {
