feat: better style policy category text/container

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -92,10 +92,12 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                     <div class="policy-materials__container">
                         <div class="policy-materials">
                             <div class="homepage-component__heading policy-materials__title">Search Policy Materials</div>
-                            <div class="policy-materials__categories">
-                                <span class="policy-materials__category">CFR</span>
-                                <span class="policy-materials__category">Guidance</span>
-                                <span class="policy-materials__category">Rule Preambles</span>
+                            <div class="policy-materials__categories--parent">
+                                <div class="policy-materials__categories">
+                                    <span class="policy-materials__category">CFR</span>
+                                    <span class="policy-materials__category">Guidance</span>
+                                    <span class="policy-materials__category">Rule Preambles</span>
+                                </div>
                             </div>
                             <div class="policy-materials__text">
                                 <p>
