feat: tweak title line height for specific widths

--- a/solution/ui/regulations/css/scss/partials/_site_homepage.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage.scss
@@ -361,6 +361,12 @@
                 }
             }
 
+            @container cta-container (min-width: 630px) and (max-width: 658px) {
+                .policy-materials__title {
+                    line-height: 1.5rem;
+                }
+            }
+
             @container cta-container (max-width: 799px) {
                 .cta {
                     .about-text__container {
