EREGCSC-1552 / EREGCSC-1902 -- New Home Page Final Draft (#844)
* chore: formatting

* feat: first pass as content and styles

* feat: style tweaks at container breakpoints

* fix: resources tabs styles

* feat: add clamped font size for fluid type tab labels

* feat: label, style, a11y tweaks

* feat: bust CSS cache once per day

* fix: resizing issue on vue component load

* feat: padding tweaks

* feat: minor responsive padding tweaks

* fix: tweak example search link

* fix: better external link icon styles

* feat: use new homepage template for homepage

* test: update homepage tests

* test: updated test

* fix: properly remove homepage prototype references

* chore: package-lock changes

* test: flesh out homepage tests

* chore: move all updated styles to _site_hompage.css; delete update stylesheet

* test: comment out assertion that is not deterministic

* fix: import application settings to homepage stylesheet

* chore: only reference 45 CFR 95 on homepage

* fix: resources tab fonts

* test: update assertion text

* fix: clean up botched merge conflict resolution

* fix: update includes text

* fix: tweak clamp preferred value

* test: update assertion

* feat: granular containers; consistent header font size

* feat: better style policy category text/container

* feat: hard code desired categories for supp content

* feat: programmatically get categories for supp content call

* feat: tweak title line height for specific widths

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -226,6 +226,13 @@ $width-3xl: 1920px; // The largest the site container will get
     }
 }
 
+// 320px
+@mixin screen-eds-xs {
+    @media (min-width: #{$eds-width-xs}) {
+        @content;
+    }
+}
+
 // 375px, or iPhone X
 @mixin screen-xs {
     @media (min-width: #{$width-xs}) {
@@ -247,9 +254,30 @@ $width-3xl: 1920px; // The largest the site container will get
     }
 }
 
+// 780px
+@mixin screen-eds-sm {
+    @media (min-width: #{$eds-width-sm}) {
+        @content;
+    }
+}
+
 // 1024px
 @mixin screen-lg {
     @media (min-width: #{$width-lg}) {
+        @content;
+    }
+}
+
+// 1024px
+@mixin screen-eds-md {
+    @media (min-width: #{$eds-width-md}) {
+        @content;
+    }
+}
+
+// 1200px
+@mixin screen-eds-lg {
+    @media (min-width: #{$eds-width-lg}) {
         @content;
     }
 }
@@ -340,22 +368,13 @@ $width-3xl: 1920px; // The largest the site container will get
 @mixin external-link {
     width: 0.8em;
     height: 0.8em;
+    padding-left: 1px;
     margin-left: 0.1em;
-    padding-left: 1em;
-    content: "";
-    -webkit-mask: url(#{$eregs-image-path}/external-link.svg) no-repeat 50% 50%;
-    mask: url(#{$eregs-image-path}/external-link.svg) no-repeat 50% 50%;
-    -webkit-mask-size: 80%;
-    mask-size: 80%;
-    -webkit-mask-position: center;
-    mask-position: center;
-    background-color: $primary_link_color;
+    content: url(#{$eregs-image-path}/external-link.svg);
 }
 
 @mixin external-link-hover {
     @include external-link;
-
-    background-color: $primary_link_hover;
 }
 
 a {
