added unit test

--- a/solution/backend/resources/templates/admin/import_resources.html
+++ b/solution/backend/resources/templates/admin/import_resources.html
@@ -4,7 +4,7 @@
     <form action="." method="post" enctype="multipart/form-data">
         {{ form.as_p }}
         {% csrf_token %}
-        <p>Get a copy of the template to use by clicking get template. </br> Upload the contnet by using import resources</p>
+        <p>Get a copy of the template to use by clicking get template. </br> Upload the content by using import resources</p>
         <p><input type="submit" name="get_template" value="Get template"/>
         <input type="submit" name="import" value="Import Resources"/></p>
     </form>
