linter fix. add intuitive what row

--- a/solution/backend/resources/templates/admin/import_resources_button.html
+++ b/solution/backend/resources/templates/admin/import_resources_button.html
@@ -1,6 +1,4 @@
-{% extends "admin/change_list.html" %} {% block object-tools-items %} {% comment
-%} The icons used here are from https://boxicons.com. When adding a new icon,
-please use this site for consistency {% endcomment %}
+{% extends "admin/change_list.html" %} {% block object-tools-items %}
 <li class="import_resources">
     <a href="import_resources/">
         <span style="vertical-align: middle; display: inline-block">
