--- a/solution/backend/resources/templates/admin/import_resources.html
+++ b/solution/backend/resources/templates/admin/import_resources.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form action="." method="GET" enctype="multipart/form-data">
     {% csrf_token %}
-    <p>The csv is required to have the following fields in order:</p>
+    <p>The CSV file is required to have the following fields in order:</p>
     <table>
         <th>Name</th>
         <th>Description</th>
@@ -11,12 +11,12 @@
         <th>Category</th>
         <th>locations</th>
     </table><br>
-    <p>You can get a copy of the template by clicking get template. </p>
-    <p><input type="submit" name="get_template" value="Get template"/>
-    <p> CSV's seperate fields by commas.  If you use google sheets or excel to make the csv you dont need to worry but if you use a text editor have the format be like below:</p>
+    <p>You can get a copy of the template by clicking "Get Template". </p>
+    <p><input type="submit" name="get_template" value="Get Template"/>
+    <p> CSV's seperate fields by commas.  If you use "Google Sheets" or "Microsoft Excel" to make the csv you do not need to worry but if you use a text editor have the format be like below:</p>
         <code>
-    Name, Description, URL, Category, locations <br>
-    conent-1, description-1, url-1, category-1, "location-1, location-2, location-3"<br><br>
+    Name, Description, URL, Category, Locations <br>
+    content-1, description-1, url-1, category-1, "location-1, location-2, location-3"<br><br>
     </code>
     Locations need to be in the following format: <br>
     <ul>
