fixed issues with some endpoints

--- a/solution/backend/regulations/templates/regulations/partials/node_types/SECTION.html
+++ b/solution/backend/regulations/templates/regulations/partials/node_types/SECTION.html
@@ -46,6 +46,7 @@
                     title="{{cfr_title}}"
                     part="{{node.label.0}}"
                     section="{{node.label.1}}"
+                    api-url="{{ API_BASE }}"
                 />
             </tooltip-container>
         </div>
