fix: update More Guidance URL params

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -85,7 +85,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                     <div class="resources__container">
                         <recent-resources
                             api-url={{ API_BASE }}
-                            resource-link='{% url 'resources' %}?resourceCategory=Subregulatory%20Guidance,State%20Medicaid%20Director%20Letter%20%28SMDL%29,State%20Health%20Official%20%28SHO%29%20Letter,CMCS%20Informational%20Bulletin%20%28CIB%29,Frequently%20Asked%20Questions%20%28FAQs%29,State%20Medicaid%20Manual%20%28SMM%29&sort=newest'
+                            resource-link='{% url 'resources' %}'
                             fr-doc-link='{% url 'resources' %}?resourceCategory={{ fr_docs_category_name }}'
                         />
                     </div>
