upate djtemplate variable on django template

--- a/solution/backend/regulations/templates/regulations/partials/sidebar_right.html
+++ b/solution/backend/regulations/templates/regulations/partials/sidebar_right.html
@@ -18,6 +18,7 @@
         :resource_display=true
         :sections="{{ node_list.sections }}"
         :subparts="{{ node_list.subparts }}"
+        :dj_tempalte=true
     ></supplemental-content>
     {% endif %}
 
